cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
#project (libJetScapeEloss)

#for MacOSX
cmake_policy(SET CMP0042 NEW)

#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "../lib/")

#set (SOURCES JetClass.cpp fjcore.cc PartonShower.cc)

#add_library(JetScapeEloss SHARED ${SOURCES})

#target_link_libraries( JetScapeEloss JetScapeHydro GTL)
#target_link_libraries(JetScapeTest JetScape JetScapeHydro)


